--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@babel/plugin-proposal-class-properties": "^7.16.7",
         "@babel/plugin-transform-runtime": "^7.17.0",
+        "react-linkify": "^1.0.0-alpha",
         "react-router-dom": "^5.2.0",
         "sweetalert2": "^11.4.4"
     }
