--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@symfony/webpack-encore": "^1.7.0",
         "axios": "^0.26.0",
         "core-js": "^3.0.0",
+        "dotenv-webpack": "^7.1.0",
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -23,8 +24,13 @@
     "dependencies": {
         "@babel/plugin-proposal-class-properties": "^7.16.7",
         "@babel/plugin-transform-runtime": "^7.17.0",
+        "buffer": "^6.0.3",
+        "dotenv": "^16.0.0",
+        "react-bootstrap": "^2.2.1",
         "react-linkify": "^1.0.0-alpha",
         "react-router-dom": "^5.2.0",
-        "sweetalert2": "^11.4.4"
+        "react-select": "^5.2.2",
+        "sweetalert2": "^11.4.4",
+        "universal-cookie": "^4.0.4"
     }
 }
