--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@babel/plugin-transform-runtime": "^7.17.0",
         "buffer": "^6.0.3",
         "dotenv": "^16.0.0",
+        "file-loader": "^6.2.0",
         "react-bootstrap": "^2.2.1",
         "react-linkify": "^1.0.0-alpha",
         "react-router-dom": "^5.2.0",
