--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "react-linkify": "^1.0.0-alpha",
         "react-router-dom": "^5.2.0",
         "react-select": "^5.2.2",
+        "react-simple-wysiwyg": "^2.0.2",
+        "dompurify": "^2.3.6",
         "sweetalert2": "^11.4.4",
         "universal-cookie": "^4.0.4"
     }
