--- a/package.json
+++ b/package.json
@@ -25,17 +25,18 @@
         "@babel/plugin-proposal-class-properties": "^7.16.7",
         "@babel/plugin-transform-runtime": "^7.17.0",
         "buffer": "^6.0.3",
+        "dompurify": "^2.3.6",
         "dotenv": "^16.0.0",
         "file-loader": "^6.2.0",
         "leaflet": "^1.7.1",
         "react-bootstrap": "^2.2.1",
         "react-bootstrap-typeahead": "^6.0.0-alpha.9",
         "react-leaflet": "^3.2.5",
+        "react-leaflet-markercluster": "^3.0.0-rc1",
         "react-linkify": "^1.0.0-alpha",
         "react-router-dom": "^5.2.0",
         "react-select": "^5.2.2",
         "react-simple-wysiwyg": "^2.0.2",
-        "dompurify": "^2.3.6",
         "sweetalert2": "^11.4.4",
         "universal-cookie": "^4.0.4"
     }
